app/main/default/objects/BigQuery_Export__c/BigQuery_Export__c.object-meta.xml
<CustomObject>
    <description>Each export is a schedule of objects to push into BigQuery.</description>
    <label>BigQuery Export</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BigQuery Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>