app/main/default/objects/BigQuery_Export__c/fields/Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Run__c</fullName>
    <inlineHelpText>The date/time that this export was last run.</inlineHelpText>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>