app/main/default/objects/BigQuery_Export__c/fields/Last_Run_Start__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Start__c</fullName>
    <label>Last Run Start</label>
    <summarizedField>BigQuery_Export_Object__c.Last_Run_Start__c</summarizedField>
    <summaryFilterItems>
        <field>BigQuery_Export_Object__c.Last_Run_Finished__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>BigQuery_Export_Object__c.BigQuery_Export__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>