app/main/default/objects/BigQuery_Export__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily at 12am</fullName>
            </value>
            <value>
                <fullName>Daily at 1am</fullName>
            </value>
            <value>
                <fullName>Daily at 2am</fullName>
            </value>
            <value>
                <fullName>Daily at 3am</fullName>
            </value>
            <value>
                <fullName>Daily at 4am</fullName>
            </value>
            <value>
                <fullName>Daily at 5am</fullName>
            </value>
            <value>
                <fullName>Daily at 6am</fullName>
            </value>
            <value>
                <fullName>Daily at 7am</fullName>
            </value>
            <value>
                <fullName>Daily at 8am</fullName>
            </value>
            <value>
                <fullName>Daily at 9am</fullName>
            </value>
            <value>
                <fullName>Daily at 10am</fullName>
            </value>
            <value>
                <fullName>Daily at 11am</fullName>
            </value>
            <value>
                <fullName>Daily at 12pm</fullName>
            </value>
            <value>
                <fullName>Daily at 1pm</fullName>
            </value>
            <value>
                <fullName>Daily at 2pm</fullName>
            </value>
            <value>
                <fullName>Daily at 3pm</fullName>
            </value>
            <value>
                <fullName>Daily at 4pm</fullName>
            </value>
            <value>
                <fullName>Daily at 5pm</fullName>
            </value>
            <value>
                <fullName>Daily at 6pm</fullName>
            </value>
            <value>
                <fullName>Daily at 7pm</fullName>
            </value>
            <value>
                <fullName>Daily at 8pm</fullName>
            </value>
            <value>
                <fullName>Daily at 9pm</fullName>
            </value>
            <value>
                <fullName>Daily at 10pm</fullName>
            </value>
            <value>
                <fullName>Daily at 11pm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>